crates/tree-sitter-hiko/test/corpus/declarations.txt
==================
Imports and values
==================

use "./local.hml"
import Std.Option
import __Builtin.Filesystem
import Std.Result (Ok, Err, map)
val answer = 42
val rec inc = fn x => x + 1

---

(source_file
  (use_declaration
    (string_literal))
  (import_declaration
    (upper_identifier)
    (upper_identifier))
  (import_declaration
    (internal_package_identifier)
    (upper_identifier))
  (import_declaration
    (upper_identifier)
    (upper_identifier)
    (import_exposure_list
      (exposed_import_name
        (upper_identifier))
      (exposed_import_name
        (upper_identifier))
      (exposed_import_name
        (identifier))))
  (value_declaration
    (annotated_pattern
      (as_pattern
        (cons_pattern
          (application_pattern
            (atomic_pattern
              (identifier))))))
    (annotated_expression
      (pipe_expression
        (orelse_expression
          (andalso_expression
            (comparison_expression
              (cons_expression
                (additive_expression
                  (multiplicative_expression
                    (application_expression
                      (unary_expression
                        (application_atom
                          (integer_literal)))))))))))))
  (value_rec_declaration
    (identifier)
    (fn_expression
      (annotated_pattern
        (as_pattern
          (cons_pattern
            (application_pattern
              (atomic_pattern
                (identifier))))))
      (annotated_expression
        (pipe_expression
          (orelse_expression
            (andalso_expression
              (comparison_expression
                (cons_expression
                  (additive_expression
                    (additive_expression
                      (multiplicative_expression
                        (application_expression
                          (unary_expression
                            (application_atom
                              (identifier))))))
                    (additive_operator)
                    (multiplicative_expression
                      (application_expression
                        (unary_expression
                          (application_atom
                            (integer_literal)))))))))))))))

==================
Functions, datatype, and type alias
==================

fun id x = x
and choose xs fallback =
  case xs of
      [] => fallback
    | x :: _ => x

datatype 'a option = None | Some of 'a
type pair = int * int

---

(source_file
  (function_declaration
    (function_binding
      (identifier)
      (function_clause
        (atomic_pattern
          (identifier))
        (annotated_expression
          (pipe_expression
            (orelse_expression
              (andalso_expression
                (comparison_expression
                  (cons_expression
                    (additive_expression
                      (multiplicative_expression
                        (application_expression
                          (unary_expression
                            (application_atom
                              (identifier))))))))))))))
    (function_binding
      (identifier)
      (function_clause
        (atomic_pattern
          (identifier))
        (atomic_pattern
          (identifier))
        (annotated_expression
          (pipe_expression
            (orelse_expression
              (andalso_expression
                (comparison_expression
                  (cons_expression
                    (additive_expression
                      (multiplicative_expression
                        (application_expression
                          (unary_expression
                            (case_expression
                              (annotated_expression
                                (pipe_expression
                                  (orelse_expression
                                    (andalso_expression
                                      (comparison_expression
                                        (cons_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (application_expression
                                                (unary_expression
                                                  (application_atom
                                                    (identifier))))))))))))
                              (case_arm
                                (annotated_pattern
                                  (as_pattern
                                    (cons_pattern
                                      (application_pattern
                                        (atomic_pattern
                                          (list_pattern))))))
                                (annotated_expression
                                  (pipe_expression
                                    (orelse_expression
                                      (andalso_expression
                                        (comparison_expression
                                          (cons_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (application_expression
                                                  (unary_expression
                                                    (application_atom
                                                      (identifier)))))))))))))
                              (case_arm
                                (annotated_pattern
                                  (as_pattern
                                    (cons_pattern
                                      (application_pattern
                                        (atomic_pattern
                                          (identifier)))
                                      (cons_pattern
                                        (application_pattern
                                          (atomic_pattern
                                            (wildcard)))))))
                                (annotated_expression
                                  (pipe_expression
                                    (orelse_expression
                                      (andalso_expression
                                        (comparison_expression
                                          (cons_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (application_expression
                                                  (unary_expression
                                                    (application_atom
                                                      (identifier)))))))))))))))))))))))))))
  (datatype_declaration
    (type_parameters
      (type_variable))
    (name
      (identifier))
    (constructor_declaration
      (upper_identifier))
    (constructor_declaration
      (upper_identifier)
      (arrow_type
        (tuple_type
          (type_application
            (type_argument
              (type_variable)))))))
  (type_alias_declaration
    (name
      (identifier))
    (arrow_type
      (tuple_type
        (tuple_type
          (type_application
            (type_argument
              (name
                (identifier)))))
        (type_application
          (type_argument
            (name
              (identifier))))))))
