crates/tree-sitter-hiko/test/corpus/effects.txt
==================
Effects and handlers
==================

structure Filesystem = struct
  effect ReadBytes of string

  fun read_bytes path =
    perform ReadBytes path

  fun run f =
    handle f ()
    with
      return x => x
    | ReadBytes path k =>
        resume k (read_file_bytes path)
end

---

(source_file
  (structure_declaration
    (upper_identifier)
    (effect_declaration
      (upper_identifier)
      (arrow_type
        (tuple_type
          (type_application
            (type_argument
              (name
                (identifier)))))))
    (function_declaration
      (function_binding
        (identifier)
        (function_clause
          (atomic_pattern
            (identifier))
          (annotated_expression
            (pipe_expression
              (orelse_expression
                (andalso_expression
                  (comparison_expression
                    (cons_expression
                      (additive_expression
                        (multiplicative_expression
                          (application_expression
                            (unary_expression
                              (perform_expression
                                (upper_identifier)
                                (application_atom
                                  (identifier))))))))))))))))
    (function_declaration
      (function_binding
        (identifier)
        (function_clause
          (atomic_pattern
            (identifier))
          (annotated_expression
            (pipe_expression
              (orelse_expression
                (andalso_expression
                  (comparison_expression
                    (cons_expression
                      (additive_expression
                        (multiplicative_expression
                          (application_expression
                            (unary_expression
                              (handle_expression
                                (annotated_expression
                                  (pipe_expression
                                    (orelse_expression
                                      (andalso_expression
                                        (comparison_expression
                                          (cons_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (application_expression
                                                  (unary_expression
                                                    (application_atom
                                                      (identifier)))
                                                  (application_argument
                                                    (application_atom
                                                      (unit_expression))))))))))))
                                (handler_variable
                                  (identifier))
                                (annotated_expression
                                  (pipe_expression
                                    (orelse_expression
                                      (andalso_expression
                                        (comparison_expression
                                          (cons_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (application_expression
                                                  (unary_expression
                                                    (application_atom
                                                      (identifier))))))))))))
                                (effect_handler
                                  (upper_identifier)
                                  (handler_variable
                                    (identifier))
                                  (handler_variable
                                    (identifier))
                                  (annotated_expression
                                    (pipe_expression
                                      (orelse_expression
                                        (andalso_expression
                                          (comparison_expression
                                            (cons_expression
                                              (additive_expression
                                                (multiplicative_expression
                                                  (application_expression
                                                    (unary_expression
                                                      (resume_expression
                                                        (application_atom
                                                          (identifier))
                                                        (application_atom
                                                          (parenthesized_expression
                                                            (annotated_expression
                                                              (pipe_expression
                                                                (orelse_expression
                                                                  (andalso_expression
                                                                    (comparison_expression
                                                                      (cons_expression
                                                                        (additive_expression
                                                                          (multiplicative_expression
                                                                            (application_expression
                                                                              (unary_expression
                                                                                (application_atom
                                                                                  (identifier)))
                                                                              (application_argument
                                                                                (application_atom
                                                                                  (identifier))))))))))))))))))))))))))))))))))))))))))
